traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:19: error: not found: value get
    writeMessage(get(Y) * get(X) -1)
                 ^TraversalByColumn:19: error: not found: value Y
    writeMessage(get(Y) * get(X) -1)
                     ^TraversalByColumn:19: error: not found: value get
    writeMessage(get(Y) * get(X) -1)
                          ^TraversalByColumn:19: error: not found: value X
    writeMessage(get(Y) * get(X) -1)
                              ^